--- a/templates/manage_stocks.html
+++ b/templates/manage_stocks.html
@@ -130,7 +130,7 @@
                                 <form action="{{ url_for('delete_stock', id=s.id) }}" method="post" class="d-inline"
                                     onsubmit="return confirm('Remove this unit from system?');">
                                     <button type="submit" class="btn btn-sm btn-outline-danger">
-                                        <i class="bi bi-trash"></i>
+                                        <i class="bi bi-trash"></i> Delete
                                     </button>
                                 </form>
                             </div>
