--- a/templates/manage_clients.html
+++ b/templates/manage_clients.html
@@ -48,22 +48,22 @@
                         <td class="text-end pe-4">
                             <div class="btn-group">
                                 <a href="{{ url_for('view_client', id=c.id) }}" class="btn btn-sm btn-outline-primary">
-                                    <i class="bi bi-eye"> View</i>
+                                    <i class="bi bi-eye"></i> View
                                 </a>
-                                <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal"
+                                <button class="btn btn-sm btn-outline-warning" data-bs-toggle="modal"
                                     data-bs-target="#editClient{{ c.id }}">
-                                    <i class="bi bi-pencil"> Update</i>
+                                    <i class="bi bi-pencil"></i> Update
                                 </button>
 
                                 {% if c.unit_count > 0 %}
                                 <button class="btn btn-sm btn-outline-danger" disabled
                                     title="Cannot delete client with active units assigned">
-                                    <i class="bi bi-trash"> Delete</i>
+                                    <i class="bi bi-trash"></i> Delete
                                 </button>
                                 {% else %}
                                 <a href="{{ url_for('delete_client', id=c.id) }}" class="btn btn-sm btn-outline-danger"
                                     onclick="return confirm('Are you sure you want to delete this client?')">
-                                    <i class="bi bi-trash"> Delete</i>
+                                    <i class="bi bi-trash"></i> Delete
                                 </a>
                                 {% endif %}
                             </div>
