--- a/templates/manage_fixture_types.html
+++ b/templates/manage_fixture_types.html
@@ -39,13 +39,13 @@
                                         <button class="btn btn-sm btn-outline-warning" 
                                                 data-bs-toggle="modal" 
                                                 data-bs-target="#editType{{ t.id }}">
-                                            <i class="bi bi-pencil"></i>
+                                            <i class="bi bi-pencil"></i> Edit Name
                                         </button>
                                         <form action="{{ url_for('delete_fixture_type', id=t.id) }}" method="post" class="d-inline">
                                             <button type="submit" class="btn btn-sm btn-outline-danger" 
                                                     {% if t.model_count > 0 %}disabled title="Category in use"{% endif %}
                                                     onclick="return confirm('Delete this category?');">
-                                                <i class="bi bi-trash"></i>
+                                                <i class="bi bi-trash"></i> Delete
                                             </button>
                                         </form>
                                     </div>
